# biomaid

./: .gitignore  .gitmodules  NEWS.md  README.md  bitbucket-pipelines.yml  conftest.py  example_instance_settings.py  manage.py  match_reference.txt  mktest_instance_settings.py  pylenium.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-instance.sh  test.gv
DOC/: AIDES.txt  Demarrage apres mise en place du serveur BIOMAID.docx  Grille états demandes travaux.xlsx  INSTALL_Pyenv_Pyth3_Django  Implémentation.md  fonctionnalités.md  goodies.txt  logiciels_interessants.txt  plan_pluriannuel.md  presentation-full-presenter.sozi.html  presentation-full.sozi.html  presentation-full.sozi.json
analytics/: admin.py  anomaly.py  apps.py  data.py  match.py  models.py  utils.py
analytics/migrations/: 0001_initial.py  0002_datasource_storage_policy.py  0003_datasource_auto_datasource_cloture_and_more.py  0004_datasource_schedule.py  0005_remove_datasource_auto_datasource_auto2.py  0006_rename_auto2_datasource_auto.py  0007_remove_datasource_dependencies_datasource_inputs_and_more.py  0008_alter_data_managers_alter_datasource_managers.py  0008_rename_datasource_dbdatasource.py
assetplusconnect/: apps.py  models.py  smart_views.py  urls.py  views.py
assetplusconnect/migrations/: 0001_initial.py  0002_bft1996_docliste_encours.py  0003_contrat_histoeq.py  0004_fournis2.py  0005_alter_suiviupdates_managers.py
assetplusconnect/tests/: tests.py
common/: __init__.py  admin.py  alerts.py  apps.py  auth_backends.py  auth_views.py  base_views.py  command.py  configuration.py  db_utils.py  forms.py  middleware.py  models.py  smart_views.py  urls.py  user_settings.py  utils.py  views.py  workflow.py
common/jobs/: alerts_check.py  import_then_analyse.py  sample.py  structure_check.py
common/migrations/: 0001_initial.py  0002_auto_20200820_0729.py  0003_auto_20200822_1411.py  0004_auto_20200822_1553.py  0005_auto_20200823_0820.py  0006_auto_20200823_0824.py  0007_auto_20200823_0912.py  0008_auto_20200824_0634.py  0009_acheteur_discipline_domaine_programme.py  0010_auto_20201006_2140.py  0011_auto_20201020_0646.py  0012_delete_expertmetier.py  0013_auto_20201022_2136.py  0014_auto_20201210_1149.py  0015_auto_20201210_1159.py  0019_auto_20210108_2143.py  0020_userufrole_site.py  0021_merge_20210112_0742.py  0022_auto_20210113_2145.py  0023_auto_20210113_2150.py  0024_programme_etablissement.py  0025_merge_20210118_2041.py  0030_alert.py  (+69 more)
dem/: admin.py  analytics.py  apps.py  models.py  smart_views.py  urls.py  utils.py  views.py  views21.py  views22.py  views_tvx.py
docs/: Makefile  conf.py  index.rst
document/: admin.py  apps.py  models.py  smart_fields.py  utils.py  views.py
dra/: asgi.py  urls.py  views.py  wsgi.py
dra94/: apps.py  models.py  views.py
drachar/: admin.py  apps.py  fields.py  forms.py  models.py  smart_views.py  urls.py  views.py  views21.py  views_tvx.py
extable/: apps.py  engine_csv.py  engine_database.py  engine_excel.py  engine_pandas.py  engine_tps.py  engines.py  initialize.py  models.py
finance/: Request.toml  admin.py  analytics.py  apps.py  models.py  smart_views.py  tests.py  urls.py  views.py
fixtures/: demo_db.json  tests_db.json
generic_comment/: apps.py  models.py  smart_fields.py  views.py
geprete/: admin.py  apps.py  models.py  smart_views.py  urls.py  views.py
importationdata/: admin.py  apps.py  views.py
local_afib/: settings.py
local_biomaid/: config.toml  settings.py
marche/: admin.py  apps.py  models.py  smart_views.py  urls.py  views.py
oraclenvc/: base.py
overoly/: base.py  queryset.py  workflow.py
polyexpr/: polyexpr.py
settings/: __init__.py  version.py
smart_view/: smart_expression.py  smart_fields.py  smart_form.py  smart_page.py  smart_table.py  smart_view.py  smart_widget.py  views.py
tools/: autoinstall.yaml  biomaid-instance@.service  contrat_drager_2022.py  dem_exploit_clone.sh  devtool.py  install_avahi.sh  install_vm_all.sh  install_vm_dra_gunicorn.conf  install_vm_settings.py  install_vm_site_nginx_dra.conf  invoices_grab.py  mk-iso.yaml  mk_iso.py  mktest.py  models_asset.py  prepare_v011.py  run-instance.sh  update_enveloppe_et_quantite_validee.py  vm_install.sh
vuejs/: README.md  package-lock.json  package.json  vite.config.js
(+452 files in other folders)
